--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently --kill-others \"tsc -w\" \"nodemon .\\dist\\index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.7.36",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.5"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
     "@types/express": "^4.17.8",
-    "@types/node": "^14.10.1",
-    "express": "^4.17.1"
+    "@types/node": "^14.10.1"
   }
 }
