--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.5"
+    "mongoose": "^5.10.5",
+    "nodemon": "^2.0.6"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
